--- a/WarehouseControl/Views/Shared/_Layout.cshtml
+++ b/WarehouseControl/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Product" asp-action="Index">Product</a></li>
-                    <li><a asp-area="" asp-controller="Shop" asp-action="Index">Shop</a></li>
-                    <li><a asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a></li>
-                    <li><a asp-area="" asp-controller="Order" asp-action="Index">Order</a></li>
+                    <li><a asp-area="" asp-controller="Product" asp-action="Index">Товары</a></li>
+                    <li><a asp-area="" asp-controller="Shop" asp-action="Index">Магазины</a></li>
+                    <li><a asp-area="" asp-controller="Supplier" asp-action="Index">Поставщики</a></li>
+                    <li><a asp-area="" asp-controller="Orders" asp-action="Index">Закупки</a></li>
                     <li><a asp-area="" asp-controller="Sales" asp-action="Index">Sales</a></li>
                 </ul>
             </div>
